source/tests/errors/nterpolation_function_call.apex
import os
os.output("CWD: {os.getcwd()}")